kubernetes/test/apps/prometheus/prometheus/app/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: grafana
  namespace: monitoring
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`monitor.kt.04a.ca`)
      kind: Rule
      services:
        - name: kube-prometheus-stack-grafana
          namespace: monitoring
          port: 80
      middlewares:
        - name: default-headers
          namespace: traefik
  #tls:
  # secretName: local-04a-ca-staging-tls
  # tls:
  #   certResolver: default
